--- a/HoiThao/HoiThao.Web/HoiThao.Web.csproj
+++ b/HoiThao/HoiThao.Web/HoiThao.Web.csproj
@@ -60,6 +60,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="LinqToExcel, Version=1.11.0.0, Culture=neutral, PublicKeyToken=9c8ea65a58f03f1f, processorArchitecture=MSIL">
+      <HintPath>..\packages\LinqToExcel.1.11.0\lib\LinqToExcel.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Owin, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Owin.4.0.0\lib\net451\Microsoft.Owin.dll</HintPath>
@@ -69,6 +72,15 @@
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Remotion, Version=1.13.52.2, Culture=neutral, PublicKeyToken=0669cf0452175907, processorArchitecture=MSIL">
+      <HintPath>..\packages\LinqToExcel.1.11.0\lib\Remotion.dll</HintPath>
+    </Reference>
+    <Reference Include="Remotion.Data.Linq, Version=1.13.52.2, Culture=neutral, PublicKeyToken=0669cf0452175907, processorArchitecture=MSIL">
+      <HintPath>..\packages\LinqToExcel.1.11.0\lib\Remotion.Data.Linq.dll</HintPath>
+    </Reference>
+    <Reference Include="Remotion.Interfaces, Version=1.13.52.2, Culture=neutral, PublicKeyToken=0669cf0452175907, processorArchitecture=MSIL">
+      <HintPath>..\packages\LinqToExcel.1.11.0\lib\Remotion.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -190,6 +202,7 @@
       <DependentUpon>HoiThaoDbContext.edmx</DependentUpon>
     </Compile>
     <Compile Include="Data\Repositories\accountRepository.cs" />
+    <Compile Include="Data\Repositories\aseanRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -201,11 +214,13 @@
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\accountService.cs" />
+    <Compile Include="Service\aseanService.cs" />
     <Compile Include="Service\CommonService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Admin\css\user.css" />
     <Content Include="Assets\Admin\js\alertBox.js" />
+    <Content Include="Assets\Admin\js\Layout\layoutController.js" />
     <Content Include="Assets\Admin\js\User\bootbox.min.js" />
     <Content Include="Assets\Admin\js\User\jquery-ui\external\jquery\jquery.js" />
     <Content Include="Assets\Admin\js\User\jquery-ui\images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
@@ -1548,6 +1563,7 @@
       <DependentUpon>HoiThaoDbContext.edmx</DependentUpon>
       <LastGenOutput>HoiThaoDbContext.cs</LastGenOutput>
     </Content>
+    <Content Include="Excel.ico" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -1643,9 +1659,13 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\account\Index.cshtml" />
     <Content Include="Views\account\_AddUpdateModal.cshtml" />
+    <Content Include="Views\Shared\_ImportExcelModal.cshtml" />
+    <Content Include="Views\Home\UploadExcel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Doc\" />
+    <Folder Include="excelfolder\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
