--- a/HoiThao/HoiThao.Web/HoiThao.Web.csproj
+++ b/HoiThao/HoiThao.Web/HoiThao.Web.csproj
@@ -421,6 +421,16 @@
     <Content Include="Assets\Admin\js\User\mustache.min.js" />
     <Content Include="Assets\Admin\js\User\userController.js" />
     <Content Include="Assets\Admin\js\User\userValidate.js" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap-grid.css" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap-grid.min.css" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap-reboot.css" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap-reboot.min.css" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap.css" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap.min.css" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\js\bootstrap.bundle.js" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\js\bootstrap.bundle.min.js" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\js\bootstrap.js" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\js\bootstrap.min.js" />
     <Content Include="Assets\fontawesome-free-5.1.0-web\css\all.css" />
     <Content Include="Assets\fontawesome-free-5.1.0-web\css\brands.css" />
     <Content Include="Assets\fontawesome-free-5.1.0-web\css\fontawesome.css" />
@@ -1804,6 +1814,16 @@
     <Content Include="Assets\Admin\js\Plugin\numeral\LICENSE" />
     <Content Include="Assets\Admin\js\Plugin\numeral\package.json" />
     <Content Include="Assets\Admin\js\Plugin\numeral\README.md" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap-grid.css.map" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap-grid.min.css.map" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap-reboot.css.map" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap-reboot.min.css.map" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap.css.map" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\css\bootstrap.min.css.map" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\js\bootstrap.bundle.js.map" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\js\bootstrap.bundle.min.js.map" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\js\bootstrap.js.map" />
+    <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\js\bootstrap.min.js.map" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
