--- a/HoiThao/HoiThao.Web/packages.config
+++ b/HoiThao/HoiThao.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="AutoMapper" version="4.2.1" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="EPPlus" version="4.5.3" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="LinqToExcel" version="1.11.0" targetFramework="net461" />
