--- a/HoiThao/HoiThao.Web/HoiThao.Web.csproj
+++ b/HoiThao/HoiThao.Web/HoiThao.Web.csproj
@@ -54,6 +54,9 @@
     <Reference Include="AutoMapper, Version=4.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.4.2.1\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -72,6 +75,9 @@
     </Reference>
     <Reference Include="Microsoft.Owin.Host.SystemWeb, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Owin.Host.SystemWeb.4.0.0\lib\net451\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
+    </Reference>
+    <Reference Include="NumToWords">
+      <HintPath>F:\MS\Tools\NumToWords.dll</HintPath>
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
@@ -174,11 +180,13 @@
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Common\CommonConstants.cs" />
     <Compile Include="Common\MaHoaSHA1.cs" />
+    <Compile Include="Common\Pdf.cs" />
     <Compile Include="Common\Utilities.cs" />
     <Compile Include="Controllers\accountController.cs" />
     <Compile Include="Controllers\aseanController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\PrintController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Data\Infrastructure\DbFactory.cs" />
     <Compile Include="Data\Infrastructure\Disposable.cs" />
@@ -217,10 +225,33 @@
     <Compile Include="Infrastructure\Extensions\EntityExtensions.cs" />
     <Compile Include="Mappings\AutoMapperConfiguration.cs" />
     <Compile Include="Models\accountViewModel.cs" />
+    <Compile Include="Models\aseanReport.cs" />
     <Compile Include="Models\aseanViewModel.cs" />
     <Compile Include="Models\changepassViewModel.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\aseanDataset.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>aseanDataset.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\DataSetVAT.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSetVAT.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\rptVAT.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>rptVAT.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reports\rpt_asean.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>rpt_asean.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Service\accountService.cs" />
     <Compile Include="Service\aseanService.cs" />
     <Compile Include="Service\CommonService.cs" />
@@ -232,6 +263,7 @@
     <Content Include="Assets\Admin\js\Home\homeController.js" />
     <Content Include="Assets\Admin\js\Layout\reportController.js" />
     <Content Include="Assets\Admin\js\Layout\layoutController.js" />
+    <Content Include="Assets\Admin\js\Plugin\jQuery.print.js" />
     <Content Include="Assets\Admin\js\Plugin\numeral\Gruntfile.js" />
     <Content Include="Assets\Admin\js\Plugin\numeral\karma-ci.conf.js" />
     <Content Include="Assets\Admin\js\Plugin\numeral\locales.js" />
@@ -393,6 +425,7 @@
     <Content Include="Assets\Admin\js\Plugin\numeral\tests\locales\uk-ua.js" />
     <Content Include="Assets\Admin\js\Plugin\numeral\tests\locales\vi.js" />
     <Content Include="Assets\Admin\js\Plugin\numeral\tests\numeral.js" />
+    <Content Include="Assets\Admin\js\Print\printController.js" />
     <Content Include="Assets\Admin\js\User\bootbox.min.js" />
     <Content Include="Assets\Admin\js\User\jquery-ui\external\jquery\jquery.js" />
     <Content Include="Assets\Admin\js\User\jquery-ui\images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
@@ -1747,6 +1780,7 @@
     </Content>
     <Content Include="Excel.ico" />
     <Content Include="favicon.ico" />
+    <Content Include="favicon_.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -1831,6 +1865,29 @@
     <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\js\bootstrap.bundle.min.js.map" />
     <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\js\bootstrap.js.map" />
     <Content Include="Assets\Admin\lib\bootstrap-4.2.1-dist\js\bootstrap.min.js.map" />
+    <Content Include="Doc\Book3.xlsx" />
+    <Content Include="Reports\aseanDataset.xsc">
+      <DependentUpon>aseanDataset.xsd</DependentUpon>
+    </Content>
+    <None Include="Reports\aseanDataset.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>aseanDataset.Designer.cs</LastGenOutput>
+    </None>
+    <Content Include="Reports\aseanDataset.xss">
+      <DependentUpon>aseanDataset.xsd</DependentUpon>
+    </Content>
+    <Content Include="Reports\DataSetVAT.xsc">
+      <DependentUpon>DataSetVAT.xsd</DependentUpon>
+    </Content>
+    <None Include="Reports\DataSetVAT.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSetVAT.Designer.cs</LastGenOutput>
+    </None>
+    <Content Include="Reports\DataSetVAT.xss">
+      <DependentUpon>DataSetVAT.xsd</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -1861,6 +1918,9 @@
     <Content Include="Views\Home\_AddUpdateModal.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_HotelModal.cshtml" />
+    <Content Include="Views\Print\AseanReportDemo.cshtml" />
+    <Content Include="Views\Print\ExportReport.cshtml" />
+    <Content Include="Views\Home\PrintReceipt.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -1868,7 +1928,6 @@
     <Folder Include="Assets\Admin\js\Plugin\numeral\min\languages\" />
     <Folder Include="Assets\Admin\js\Plugin\numeral\tests\languages\" />
     <Folder Include="Assets\Admin\js\Plugin\numeral\tests\numeral\" />
-    <Folder Include="Doc\" />
     <Folder Include="excelfolder\" />
     <Folder Include="Views\asean\" />
   </ItemGroup>
@@ -1887,6 +1946,17 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Reports\rptVAT.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>rptVAT.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\rpt_asean.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>rpt_asean.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
