--- a/HoiThao/HoiThao.Web/Web.config
+++ b/HoiThao/HoiThao.Web/Web.config
@@ -81,7 +81,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="HoiThaoDbContext" connectionString="metadata=res://*/Data.Models.HoiThaoDbContext.csdl|res://*/Data.Models.HoiThaoDbContext.ssdl|res://*/Data.Models.HoiThaoDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.4.198;initial catalog=hoinghi;user id=sa;password=TigerSts@2017;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="con" connectionString="Server=192.168.4.198;Database=hoinghi;User Id=sa;Password=TigerSts@2017" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+
+ 
+  <add name="HoiThaoDbContext" connectionString="metadata=res://*/Data.Models.HoiThaoDbContext.csdl|res://*/Data.Models.HoiThaoDbContext.ssdl|res://*/Data.Models.HoiThaoDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.4.198;initial catalog=hoinghi;user id=sa;password=TigerSts@2017;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
